# BetterRankSearcher

./: Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/: api.py  data_fetcher.py  main.py
backend/utils/: cron_helper.py  datetime_helper.py  db_manager.py
frontend/: config.py  index_page.py  main.py  result_page.py
frontend/utils/: html_format_helper.py  url_params_helper.py
